--- a/example-flickr.html
+++ b/example-flickr.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="jquery.gallerie.js"></script>
 <link rel="stylesheet" type="text/css" href="gallerie.css"/>
 
 <script type="text/javascript">
 $(document).ready(function(){
 
-	$.ajax('http://api.flickr.com/services/rest/',{
+	$.ajax('https://secure.flickr.com/services/rest/',{
 		data: {
 			format: 'json',
 			method: 'flickr.interestingness.getList',
@@ -43,7 +43,6 @@ $(document).ready(function(){
 
 	});
 });
-
 </script>
 
 <style>
