Added imagebox transition effects.

--- a/example-slideshow.html
+++ b/example-slideshow.html
@@ -4,6 +4,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="jquery.gallerie.js"></script>
 <link rel="stylesheet" type="text/css" href="gallerie.css"/>
+<link rel="stylesheet" type="text/css" href="gallerie-effects.css"/>
 
 <script type="text/javascript">
 $(document).ready(function(){
