--- a/example-advanced.html
+++ b/example-advanced.html
@@ -55,6 +55,32 @@ $(document).ready(function(){
 		margin-left: auto;
 		margin-right: auto;
 	}
+	
+	#gallery > a {
+		margin: 15px;
+	}
+	
+	#gallery > a img {
+		border: 2px solid #fff;
+		border-radius: 5px;
+		opacity: 0.9;
+	
+		transition: all 500ms;
+		-webkit-transition: all 500ms;
+		-moz-transition: all 500ms;
+		-ms-transition: all 500ms;
+		-o-transition: all 500ms;
+		z-index: 1;
+		position: relative;
+	}
+
+	#gallery > a img:hover {
+		border-color: yellow;
+		opacity: 1.0;
+		transform: scale(1.5);
+		-webkit-transform: scale(1.5);
+		z-index: 10;
+	}
 </style>
 </head>
 
