Add missing non-webkit transforms to advanced example.

--- a/example-advanced.html
+++ b/example-advanced.html
@@ -79,6 +79,9 @@ $(document).ready(function(){
 		opacity: 1.0;
 		transform: scale(1.5);
 		-webkit-transform: scale(1.5);
+		-moz-transform: scale(1.5);
+		-ms-transform: scale(1.5);
+		-o-transform: scale(1.5);
 		z-index: 10;
 	}
 </style>
